= 0.8.1
* background facts work within deftests
* before/after/around work with :checks

= 0.8.0 (stable)
* Dropping support for Clojure 1.1.
* Incompatible syntax change for #'against-background
* Backgrounds can now be set for a namespace or within a
  #'fact body.
* Background-setting functions obey *include-midje-checks*
* Compiling out test code from production code actually
   works.

= 0.7.2
* Use alter-var-root instead of with-binding in preparation
  for Clojure 1.3 (and use with threads).
* against-background
   https://github.com/marick/Midje/wiki/Background-prerequisites

= 0.7.1 
* Three new checkers: map-containing, maps-containing, and
  only-maps-containing. 
* Chatty checkers are much improved.
  http://github.com/marick/Midje/wiki/Chatty-checkers
* Some bug fixes

= 0.7.0
* Chatty checkers
  http://github.com/marick/Midje/wiki/Chatty-checkers
* Added a leiningen plugin to get tidy test reports.
  http://github.com/marick/Midje/wiki/Lein-midje
* Set midje.semi-sweet/*include-midje-checks* to false to
  compile tests out of production code. 
  http://github.com/marick/Midje/wiki/Production-mode
* Incompatible change: Midje no longer defines fakes for 
  you at the top level. As with any other identifier used in
  code, they must be defined before use. The unfinished macro
  is good for that.
* Functions print as their names, if they have them, in case
  of an (exactly x) failure.
* Does a better job forcing seqs in the result to fully calculate
  themselves.
* Emacs midje-mode is a little smarter about what a Clojure
  identifier is (for M-x midje-unfinished)
  
= 0.6.1
* Midje-mode is (more) compatible with clojure-test-mode.

= 0.6.0 
* Can "unfold" nested function calls in provided facts, so
  that (f (g 1)) produces two mock calls, the first of which
  returns a metaconstant that the second expects.
* If a fact fails for more than one reason, report them all.
* midje-mode.el provides a smooth workflow for those 
  who use slime/swank.

= 0.5.0