@@ -132,6 +132,3 @@
    (is (reported? 4 [{:type :pass} {:type :pass} {:type :pass} {:type :pass}]))))
 
 
-(future-fact 1 => 2)
-(pending-fact 2 => 3)
-(incipient-fact 3 => 4) 
